whackamole/style.css
body {
	text-align: center;
	border: 1px dotted black;
}

#container{
	width: 0px;
	margin-left: auto;
	margin-right: auto;
}

#main {
	border: 1px solid black;
	width: 95%;
	height: 95%;
	padding: 10px;
	display: flex;
	cursor: crosshair;
	flex-flow: wrap;
};

